--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,6 @@ matrix:
     env:
       - GO111MODULE=on
 
-install: make ci-deps
+install: go get -v -tags ${TAGS} -t ./..
 
-script: make ci-test
+script: go test -v -tags ${TAGS} -timeout=5s -race ./...
